variables and plugins installation

--- a/src/vendor_entries/vendor.scss
+++ b/src/vendor_entries/vendor.scss
@@ -3,3 +3,5 @@
 // Note: You can import SCSS and CSS files as well.
 
 @import '../../node_modules/normalize.css/normalize.css';
+@import '../../node_modules/jquery-youtube-background/src/style.css';
+@import '../../node_modules/swiper/dist/css/swiper.min.css';
