--- a/src/scss/abstracts/variables.scss
+++ b/src/scss/abstracts/variables.scss
@@ -6,7 +6,7 @@
 $headings: (
   'sizes': (
     'h1-font-size': 30px,
-    'h2-font-size': 27px,
+    'h2-font-size': 36px,
     'h3-font-size': 24px,
     'h4-font-size': 21px,
     'h5-font-size': 17px,
@@ -20,14 +20,14 @@ $headings: (
 
 // Global vars for body typography
 $base: (
-  'base-font-sans-serif': unquote("Arial, 'Helvetica Neue', Helvetica, sans-serif"),
+  'base-font-sans-serif': unquote("'Open sans', Arial, 'Helvetica Neue', Helvetica, sans-serif"),
   'base-font-serif': unquote("'Times New Roman', Times, Baskerville, Georgia, serif"),
-  'base-text-color': #000,
+  'base-text-color': #787878,
   'base-background-color': #fff,
-  'base-link-color':#39f,
-  'base-font-size': 16px,
+  'base-link-color':#1a3255,
+  'base-font-size': 18px,
   'base-line-height': 1.2,
-  'base-font-family': unquote("Arial, 'Helvetica Neue', Helvetica, sans-serif"),
+  'base-font-family': unquote("'Open sans', Arial, 'Helvetica Neue', Helvetica, sans-serif"),
   'base-min-width': 320px
 );
 
