--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -1,19 +1,27 @@
-.header{
+.header {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    max-width: 1300px;
+    max-width: 1330px;
+    padding: 0 15px;
+    width: 100%;
+    margin: 0 auto;
     flex-wrap: nowrap;
-    @media (max-width: 640px) {
+    @include media ('<=phone') {
+        padding: 0;
         height: 120px;
     }
-    a{
+    a {
         text-decoration: none;
     }
-    &-logo{
+    &-logo {
         z-index: 6;
         position: relative;
-        @media (max-width: 640px) {
+        @include animate(opacity);
+        &:hover {
+            opacity: 0.6;
+        }
+        @include media ('<=phone') {
             height: 100%;
             background-color: #043355;
             width: 100%;
@@ -26,20 +34,23 @@
             align-items: center;
         }
     }
-    &-nav{
+    &-nav {
         z-index: 5;
     }
-    .nav{
+    .nav {
         @extend %listreset;
         display: flex;
         flex-direction: row;
-        li{
-            margin-left: 54px;
-            a{
+        li {
+            margin: 0 0 0 54px;
+            @include media ('<widescreen') {
+                margin: 0 0 0 45px;
+            }
+            a {
                 color: #fff;
                 position: relative;
                 @include animate(opacity);
-                &:after{
+                &:after {
                     display: flex;
                     justify-content: center;
                     @include animate(opacity);
@@ -52,56 +63,55 @@
                     width: 100%;
                     opacity: 0;
                 }
-                &:hover{
-                    &:after{
+                &:hover {
+                    &:after {
                         opacity: 1;
                     }
                 }
             }
         }
-        @media(max-width: 1049px){
+        @include media ('<desktop') {
             display: none;
             flex-direction: column;
             position: absolute;
             text-align: center;
             height: 100vh;
-            width: 100vw;
+            width: 100%;
             top: 0px;
             left: 0;
             background-color: #043355;
             opacity: 0.6;
             z-index: 1;
             padding-top: 120px;
-            @media (max-width: 640px) {
+            @include media ('<=phone') {
                 height: calc(100vh - 120px);
                 top: 120px;
                 padding-top: 0;
             }
-            li{
+            li {
                 margin: 25px 0;
                 width: 100%;
-                a{
+                a {
                     display: block;
                     width: 100%;
-                    &:after{
+                    &:after {
                         display: none;
                     }
                 }
             }
         }
     }
-    .opened{
+    .opened {
         display: flex;
         z-index: 5;
-
     }
-    &-menu-holder{
+    &-menu-holder {
         display: none;
         z-index: 5;
-        @media(max-width: 1049px){
+        @include media ('<desktop') {
             display: block;
         }
-        @media (max-width: 640px) {
+        @include media ('<=phone') {
             padding-top: 5px;
             padding-left: 12px;
             height: 100%;
