--- a/src/scss/layout/body.scss
+++ b/src/scss/layout/body.scss
@@ -1,5 +1,28 @@
-body{
+body {
     display: flex;
     justify-content: center;
     width: 100%;
+    flex-direction: column;
+    position: relative;
+}
+
+.background-video {
+    position: absolute;
+    top: 0;
+    max-height: 100vh;
+    z-index: -5;
+}
+
+#bg-video {
+    background: transparent;
+    height: 100%;
+    max-height: 100vh;
+    @include media('<=phone') {
+        display: none;
+    }
+    .ytplayer-container {
+        position: absolute;
+        top: 0;
+        z-index: -1;
+    }
 }
