--- a/src/scss/layout/header-intro-wrapper.scss
+++ b/src/scss/layout/header-intro-wrapper.scss
@@ -1,14 +1,12 @@
-.header-intro-wrapper{
-    display: flex;
+.header-intro-wrapper {
     width: 100%;
     padding-top: 30px;
     flex-direction: column;
-    justify-content: flex-end;
-    @media (max-width: 640px) {
+    height: 100vh;
+    @include media ('<=phone') {
         padding: 0;
         background-image: url(../../../src/images/header-intro-bg.png);
         background-repeat: no-repeat;
         background-size: cover;
-        height: 100vh;
     }
 }
